--- a/index.html
+++ b/index.html
@@ -2,24 +2,28 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Global Temperatures Visualization</title>
+  <title>Global Temperatures Scatterplot</title>
   <script src="https://d3js.org/d3.v7.min.js"></script>
-  <style>
-    svg {
-      width: 900px;
-      height: 500px;
-      border: 1px solid black;
-    }
-    circle {
-      fill: steelblue;
-      opacity: 0.7;
-    }
-  </style>
+  
 </head>
 <body>
   <h2>Global Temperatures Over Time</h2>
-  <svg id="chart1"></svg>
+  <svg id="scatterplot" width="400" height="600" ></svg>
+  
+  <script>
+    d3.json(__.json).then(function(data) {
+      const svgBar=d3.select("#bar-chart");
+      const marginBar = { top: 20, right: 20, bottom: 40, left: 40 };
+      const widthBar = +svgBar.attr("width" - marginBar.leftf - marginBar.right;
+      const heightBar = _svgBar.attr("height") - marginBar.top - marginBar.bottom;
 
-  <script src="main.js"></script>
+      const x = d3.scaleBand().range([0, widthBar]).padding(0,1).domain(data.map((d,i) => i.toString()));
+      const y = d3.scaleLinear().range([0, heightBar]).domain([0, d3.max(data, d => d.sepalLength)];
+
+      const gBar = svgBar.append("g").attr("transform", "translate(" + marginBar.Left + "," + marginBar.top + ")");
+
+      gBar.selectAll(".bar").data(data).enter().append("rect").attr("class", "bar").attr("x", (d, i) => x(i.toString())).attr("y",(d, i) => y(d.sepalLength)).attr("width", x.bandwidth())
+      .attr("height", d => heightBar - y(d.sepalLength));
+    </script>
 </body>
 </html>
