--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
 </head>
 <body>
   <h2>Global Temperatures Over Time</h2>
-
   <div id="chart" style="width: 800px; height: 500px;"></div>
-
-  
-  <script src="GlobalTemperatures.json"></script>
 
   <script>
     async function Scatter() {
-      const data = temperature;
+      
+      const data = await d3.json("GlobalTemperatures.json");
       console.log(data);
+
       const margin = { top: 20, right: 30, bottom: 40, left: 60 },
             width = 800 - margin.left - margin.right,
             height = 500 - margin.top - margin.bottom;
@@ -37,7 +35,7 @@
         .attr("transform", `translate(0,${height})`)
         .call(d3.axisBottom(x).ticks(10));
 
-      //Y axis
+      // Y axis
       const y = d3.scaleLinear()
         .domain(d3.extent(data, d => d.LAT))
         .range([height, 0]);
@@ -45,12 +43,12 @@
       svg.append("g")
         .call(d3.axisLeft(y));
 
-      // Radius 
+      // Radius scale
       const r = d3.scaleLinear()
         .domain(d3.extent(data, d => d.LATU))
         .range([1, 6]);
 
-      // Add scatterplot points
+      // Scatterplot points
       svg.append("g")
         .selectAll("circle")
         .data(data)
@@ -67,3 +65,4 @@
   </script>
 </body>
 </html>
+
