--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ data.forEach(d => {
       const maxLATU = d3.max(data, d => d.LATU);
 
       let colorScale = d3.scaleLinear()
-        .domain([maxLATU, minLATU])
+        .domain([minLATU, maxLATU])
         .range(["#d7191c", "#1a9641"]);
 
       const circles = svg.append("g")
@@ -76,7 +76,7 @@ data.forEach(d => {
       // Button 1: Sequential (Red -> Green)
       d3.select("#colormap-button-1").on("click", () => {
         const sequential = d3.scaleLinear()
-          .domain([maxLATU, minLATU])
+          .domain([minLATU, maxLATU])
           .range(["#d7191c", "#1a9641"]);
 
         circles.transition().duration(600)
@@ -88,7 +88,7 @@ data.forEach(d => {
         const meanLATU = d3.mean(data, d => d.LATU);
 
         const diverging = d3.scaleDiverging()
-          .domain([maxLATU, meanLATU, minLATU])
+          .domain([minLATU, meanLATU, maxLATU])
           .interpolator(d3.interpolateRgbBasis(["#d7191c", "#ffffbf", "#1a9641"]));
 
         circles.transition().duration(600)
@@ -98,7 +98,7 @@ data.forEach(d => {
       // Button 3: Quantized (5 Colors)
       d3.select("#colormap-button-3").on("click", () => {
         const quantized = d3.scaleQuantize()
-          .domain([maxLATU, minLATU])
+          .domain([minLATU, maxLATU])
           .range(["#d7191c", "#fdae61", "#ffffbf", "#abd9e9", "#1a9641"]);
 
         circles.transition().duration(600)
