--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Buttons to toggle colormaps -->
   <button id="colormap-button-1">Red ->Green</button>
   <button id="colormap-button-2">Diverging (Red -> Yellow -> Green)</button>
-  <button id="colormap-button-3">Quantized (5 Bands)</button>
+  <button id="colormap-button-3">Quantized (5 Colors)</button>
 
   <script>
     async function Scatter() {
