--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ data.forEach(d => {
       d3.select("#colormap-button-3").on("click", () => {
         const quantized = d3.scaleQuantize()
           .domain([minLATU, maxLATU])
-          .range(["#d7191c", "#fdae61", "#ffffbf", "#abd9e9", "#1a9641"]);
+          .range(["#d7191c", "#fdae61", "#ffffbf", "#a6d96a", "#1a9641"]);
 
         circles.transition().duration(600)
           .attr("fill", d => quantized(d.LATU));
